# TheLastBreath

./: .gitignore  CMakeLists.txt  CMakePresets.json  Changelog.md  ini.md  vcpkg-configuration.json  vcpkg.json
include/: PCH.h
include/SIGA/: AnimationHandler.h  CombatEventHandler.h  CompatibilityMonitor.h  Config.h  SlowMotion.h
include/TheLastBreath/: ActorStateManager.h  AnimationHandler.h  BlockEffectsHandler.h  CombatEventHandler.h  CombatHandler.h  CompatibilityMonitor.h  Config.h  Data.h  EldenCounterCompat.h  ExhaustionHandler.h  HitEventHandler.h  HitProcessor.h  Hooks.h  Offsets.h  RangedStaminaHandler.h  SlowMotion.h  SlowTimeUtils.h  TimedBlockHandler.h
src/: ActorStateManager.cpp  AnimationHandler.cpp  BlockEffectsHandler.cpp  CombatEventHandler.cpp  CombatHandler.cpp  CompatibilityMonitor.cpp  Config.cpp  Data.cpp  EldenCounterCompact.cpp  ExhaustionHandler.cpp  HitEventHandler.cpp  HitProcessor.cpp  Hooks.cpp  Main.cpp  RangedStaminaHandler.cpp  SlowMotion.cpp  TimedBlockHandler.cpp
